Implements basic functionality

--- a/client/app/links/links.html
+++ b/client/app/links/links.html
@@ -1,3 +1,13 @@
 <div id='container'>
   <!-- Your html here -->
+  <input type="text" ng-model="searchText"></input>
+  <ul>
+    <li ng-repeat="linkObj in data.links | filter: searchText | orderBy:'-visits' " class="link">
+      <h1 class="visits">Visits: {{linkObj.visits}}</h1>
+      <h1 class="title">{{linkObj.title}}</h1>
+      <h3>{{linkObj.link}}</h3>
+      <h5 class="original">{{linkObj.base_url}}</h5>
+      <a href="/api/links/{{linkObj.code}}">{{linkObj.url}}</a>
+    </li>
+  </ul>
 </div>
