--- a/client/app/shorten/shorten.html
+++ b/client/app/shorten/shorten.html
@@ -1,6 +1,11 @@
 <div id='container'>
 <!-- Your code here -->
-
+<form name="form" novalidate ng-submit="submitLink()">
+  <input ng-model="link.url" type="url" name="url" required />
+  <button type="submit">submit</button>
+</form>
+<span ng-show="form.url.$dirty && form.url.$error.required">Must have a URL</span>
+<span ng-show="form.url.$dirty && form.url.$error.url">Not a valid URL</span>
 </div>
 
 
