--- a/client/index.html
+++ b/client/index.html
@@ -9,6 +9,7 @@
     <h1>Shortly</h1>
 
     <!-- the ng-view directive is where our templates will be loaded into when naviagted to -->
+    <nav ng-include="'app/navigation/navigation.html'" class="navigation"></nav>
     <div ng-view></div>
 
     <script src="lib/angular/angular.js"></script>
@@ -18,6 +19,7 @@
     <script src="app/links/links.js"></script>
     <script src="app/shorten/shorten.js"></script>
     <script src="app/services/services.js"></script>
+    <script src="app/navigation/navigation.js"></script>
     <script src="app/app.js"></script>
   </body>
 </html>
