--- a/client/index.html
+++ b/client/index.html
@@ -10,10 +10,13 @@
 
     <!-- the ng-view directive is where our templates will be loaded into when naviagted to -->
     <nav ng-include="'app/navigation/navigation.html'" class="navigation"></nav>
-    <div ng-view></div>
+    <div ng-view class="fx-rotate-counterclock-right fx-easing-back"></div>
 
     <script src="lib/angular/angular.js"></script>
     <script src="lib/angular-route/angular-route.js"></script>
+    <script src="lib/angular-animate/angular-animate.js"></script>
+    <script src="lib/gsap/src/uncompressed/TweenMax.js"></script>
+    <script src="lib/ngFx/dist/ngFx.js"></script>
 
     <script src="app/auth/auth.js"></script>
     <script src="app/links/links.js"></script>
