--- a/client/app/links/links.html
+++ b/client/app/links/links.html
@@ -1,17 +1,9 @@
 <div id='container'>
-  <!-- Your html here -->
-  <input type="text" ng-model="searchText" placeholder="filter links" />
-  <ul>
-    <li shortened-link ng-repeat="linkObj in data.links | filter: searchText | orderBy:'-visits' " class="link fx-fade-right"></li>
-  </ul>
+  <md-input-container>
+    <label>Search</label>
+    <input type="text" ng-model="searchText"/>
+  </md-input-container>
+
+    <div shortened-link layout-padding ng-repeat="linkObj in data.links | filter: searchText | orderBy:'-visits' " class="md-whiteframe-z3 fx-fade-right"></div>
+
 </div>
-
-
-
-<!--
-      <h1 class="visits">Visits: {{linkObj.visits}}</h1>
-      <h1 class="title">{{linkObj.title}}</h1>
-      <h3>{{linkObj.link}}</h3>
-      <h5 class="original">{{linkObj.base_url}}</h5>
-      <a href="/api/links/{{linkObj.code}}">{{linkObj.url}}</a>
-    -->
