--- a/client/app/links/shortened-link.html
+++ b/client/app/links/shortened-link.html
@@ -1,5 +1,4 @@
-      <h1 class="visits">Visits: {{linkObj.visits}}</h1>
-      <h1 class="title">{{linkObj.title}}</h1>
-      <h3>{{linkObj.link}}</h3>
-      <h5 class="original">{{linkObj.base_url}}</h5>
-      <a href="/api/links/{{linkObj.code}}">{{linkObj.url}}</a>
+<h1 class="md-headline">{{linkObj.title}} | Visits: {{linkObj.visits}}</h1>
+<h3>{{linkObj.link}}</h3>
+<h5 class="original">{{linkObj.url}}</h5>
+<a href="/api/links/{{linkObj.code}}">http://localhost:3000/{{linkObj.code}}</a>
