--- a/client/app/auth/signin.html
+++ b/client/app/auth/signin.html
@@ -1,9 +1,20 @@
 <div id='signin'>
-  <h1>signin</h1>
+  <h1 class="md-display-1">Sign In</h1>
   <form name="signinForm" ng-submit='signin()'>
-    <input type='text'ng-model='user.username'>
-    <input type="password" ng-model='user.password'>
-    <button>signin</button>
+
+    <md-input-container>
+      <label>Username</label>
+      <input type='text' name="username" ng-model='user.username' required>
+    </md-input-container>
+
+    <md-input-container>
+      <label>Password</label>
+      <input type="password" name="password" ng-model='user.password' required>
+    </md-input-container>
+
+    <md-button class="md-raised" ng-disabled="signinForm.$invalid">Sign In</md-button>
+
   </form>
-  <a href="#/signup">Don't have an account? <strong>Signup</strong> ...</a>
+  <md-button href="#/signup">Don't have an account? <strong>Signup</strong> ...</md-button>
+
 </div>
