--- a/client/app/auth/signup.html
+++ b/client/app/auth/signup.html
@@ -1,9 +1,20 @@
 <div id='signup'>
-  <h1>signup</h1>
+  <h1 class="md-display-1">Sign Up</h1>
   <form name="signupForm" ng-submit='signup()'>
-    <input type='text' ng-model='user.username'>
-    <input type="password" ng-model='user.password'>
-    <button>signup</button>
+
+    <md-input-container>
+      <label>Username</label>
+      <input type='text' name="username" ng-model='user.username' required>
+    </md-input-container>
+
+    <md-input-container>
+      <label>Password</label>
+      <input type="password" name="password" ng-model='user.password' required>
+    </md-input-container>
+
+    <md-button class="md-raised" ng-disabled="signupForm.$invalid">Sign Up</md-button>
+
   </form>
-  <a href="#/signin">Already have an account? <strong>Signin</strong> ...</a>
+  <md-button href="#/signin">Already have an account? <strong>Signin</strong> ...</md-button>
+
 </div>
