--- a/client/index.html
+++ b/client/index.html
@@ -3,20 +3,25 @@
   <head>
     <meta charset="utf-8" />
     <title>Shortly</title>
-    <link rel="stylesheet" type="text/css" href="styles/style.css" />
+    <link rel="stylesheet" href="lib/angular-material/angular-material.css" type="text/css">
+    <link rel="stylesheet" href="lib/angular-material/modules/css/angular-material-layout.css">
+    <!-- <link rel="stylesheet" type="text/css" href="styles/style.css" /> -->
   </head>
   <body>
-    <h1>Shortly</h1>
 
     <!-- the ng-view directive is where our templates will be loaded into when naviagted to -->
     <nav ng-include="'app/navigation/navigation.html'" class="navigation"></nav>
-    <div ng-view class="fx-rotate-counterclock-right fx-easing-back"></div>
+    <md-content ui-view layout-padding></md-content>
 
     <script src="lib/angular/angular.js"></script>
     <script src="lib/angular-route/angular-route.js"></script>
+    <script src="lib/angular-ui-router/release/angular-ui-router.js"></script>
     <script src="lib/angular-animate/angular-animate.js"></script>
     <script src="lib/gsap/src/uncompressed/TweenMax.js"></script>
     <script src="lib/ngFx/dist/ngFx.js"></script>
+
+    <script src="lib/angular-aria/angular-aria.js"></script>
+    <script src="lib/angular-material/angular-material.js"></script>
 
     <script src="app/auth/auth.js"></script>
     <script src="app/links/links.js"></script>
